--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,16 @@
+body {
+  touch-action: manipulation;
+  user-select: none;
+  overflow: hidden;
+  max-height: 100vh;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -21,18 +18,19 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
   color: #61dafb;
+  height: 40vmin;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.word {
+  text-transform: uppercase;
+  padding: 20px;
+  position: relative;
+  bottom: 50px;
+  cursor: pointer;
+}
+
+.word:hover {
+  opacity: 0.75;
+  transition: 500ms opacity ease-in-out;
 }
