--- a/src/App.css
+++ b/src/App.css
@@ -19,14 +19,14 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #282c34;
+  background-color: #041C32;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #61dafb;
+  color: #ECB365;
   height: 40vmin;
 }
 
