--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
-html {
+html, body {
   overflow: hidden;
+  height: -webkit-fill-available;
 }
+
 body {
   touch-action: manipulation;
   user-select: none;
   overflow: hidden;
   max-height: 100vh;
   background-color: #041C32;
+  height: 100vh;
+  height: -webkit-fill-available;
 }
 
 button {
@@ -29,7 +33,6 @@ main {
 
 .app {
   text-align: center;
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
