--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,12 @@
 html,
 body {
   overflow: hidden;
-  height: -webkit-fill-available;
 }
 
 body {
   touch-action: manipulation;
   user-select: none;
   overflow: hidden;
-  max-height: 100vh;
   background-color: #041c32;
   height: 100vh;
   height: -webkit-fill-available;
@@ -29,6 +27,8 @@ main {
   justify-content: center;
   max-width: 65rem;
   margin: 0 auto;
+  touch-action: manipulation;
+  height: 100vh;
 }
 
 .app {
@@ -36,14 +36,12 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(1rem + 2vmin);
   color: #ecb365;
-  height: 40vmin;
   position: relative;
 }
 
