style: add animation when changing word

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,20 +29,17 @@ main {
   margin: 0 auto;
   touch-action: manipulation;
   height: 100vh;
+  width: 100%;
 }
 
 .app {
+  display: flex;
   text-align: center;
-  display: flex;
-  align-items: center;
   justify-content: center;
-  display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(1rem + 2vmin);
-  color: #ecb365;
   position: relative;
+  font-size: calc(1rem + 2vmin);
 }
 
 .language-button {
