--- a/src/App.scss
+++ b/src/App.scss
@@ -54,6 +54,9 @@ svg {
 }
 
 footer {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   background-color: #064663;
   color: #fff;
   position: absolute;
