--- a/src/App.scss
+++ b/src/App.scss
@@ -8,8 +8,8 @@ body {
   user-select: none;
   overflow: hidden;
   background-color: #041c32;
-  height: 100vh;
-  height: -webkit-fill-available;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 button {
@@ -25,11 +25,11 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 65rem;
+  max-width: 120rem;
   margin: 0 auto;
-  touch-action: manipulation;
   height: 100vh;
   width: 100%;
+  position: relative;
 }
 
 .app {
@@ -38,7 +38,6 @@ main {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  position: relative;
   font-size: calc(1rem + 2vmin);
 }
 
