Fix language titles

--- a/src/components/Word/Word.module.scss
+++ b/src/components/Word/Word.module.scss
@@ -12,8 +12,8 @@
   }
   .wordButton {
     text-transform: uppercase;
-    animation: bop 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards
-      alternate;
+    animation: bop 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards alternate;
+    letter-spacing: 2.5px;
   }
 }
 
