--- a/src/components/Word/Word.module.scss
+++ b/src/components/Word/Word.module.scss
@@ -2,12 +2,12 @@
   text-transform: uppercase;
   position: relative;
   cursor: pointer;
-  color: #ecb365;
+  color: #ffb651;
   transition: 350ms ease-in-out;
 
   &:hover {
     text-shadow: none;
-    color: #ffc678;
+    color: #f8ad46;
   }
 
   .wordButton {
@@ -15,6 +15,7 @@
     letter-spacing: 2.5px;
     text-shadow: 0px 5px #000000;
     animation: bop 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards alternate;
+    padding: 2.5rem;
   }
 }
 
